# dechat

./: .gitignore  Cargo.toml
src/: backend.rs  bin.rs  client.rs  lib.rs  main.rs  protocol.rs  server.rs  test.rs  tor.rs
src/protocol/: message.rs  mod.rs  node.rs
src/server/: mod.rs
src/tui/: app.rs  component.rs  input.rs  mod.rs  state.rs
