[package]
name = "dechat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
libtor = "47.13.0"
serde = "1.0.192"
tokio = { version = "1.7", features = ["full"] }
tor-stream = "0.3.0"
