[package]
name = "dechat"
version = "0.1.0"
edition = "2021"

[lib]
name = "dechat_lib"
path = "src/lib.rs"

[[bin]]
name = "dechat"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
crossterm = "0.27.0"
libtor = "47.13.0"
ratatui = "0.25.0"
reqwest = {version = "0.11.23", features = ["socks"] }
rocket = "0.5.0"
serde = { version = "1.0.192", features = ["serde_derive"] }
serde_json = "1.0.108"
stop-thread = "0.2.0"
tokio = { version = "1.7", features = ["full"] }
